# card-game

./: CMakeLists.txt  Makefile  README.md  main.cpp
Documents/: RapportC++.docx
card-game/: Board.cpp  Board.h  Card.cpp  Card.h  CardBuilder.cpp  CardBuilder.h  Deck.cpp  Deck.h  DeckBuilder.cpp  DeckBuilder.h  DeckTest.h  Player.cpp  Player.h  Suit.cpp  Suit.h
docs/: RapportC++.docx
examples/: Bataille.cpp  Bataille.h  Briscola.cpp  Briscola.h  GameTemplate.cpp  GameTemplate.h  HuitAmericain.cpp  HuitAmericain.h  Scopa.cpp  Scopa.h  ScopaCards.h  Tarot.cpp  Tarot.h  TarotCard.cpp  TarotCard.h  Uno.cpp  Uno.h  UnoCards.h
lib/: logger.h
lib/Google_tests/: CMakeLists.txt  gtest.cpp
tests/: BoardTest.cpp  CardTest.cpp  DeckTest.cpp  PlayerTest.cpp  card.cpp  deck.cpp
